--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TCT.FitApp.WPF"
         mc:Ignorable="d"
-        Title="MaintainUsers" Height="450" Width="800">
+        Title="MaintainUsers" Height="350" Width="400">
     <Grid>
-        
+        <Label Content="Username:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,50,0,0" FontSize="20" />
+        <Label Content="Name:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,100,0,0" FontSize="20" />
+        <Label x:Name="lblUsername" Content="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,50,0" FontSize="20" />
+        <Label x:Name="lblFullName" Content="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,100,50,0" FontSize="20" />
+        <Label Content="Access Level:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,150,0,0" FontSize="20" />
+        <ComboBox x:Name="cboAccessLevels" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" Margin="0, 150, 20, 0" FontSize="20" />
+        <Button x:Name="btnSubmit" Content="Submit" Height="50" Width="150" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="125,250,0,0" />
     </Grid>
 </Window>
