Completed MaintainAcitivities and added ActivityRebind to MainWindow.  Xaml still needs work but functions correctly.

--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainActivities.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainActivities.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TCT.FitApp.WPF"
         mc:Ignorable="d"
-        Title="MaintainActivities" Height="400" Width="400">
+        Title="Fit App" Height="450" Width="800">
     <Grid>
-        
+        <Label x:Name="lblManageActivities" HorizontalAlignment="Center" Content="Manage Activities" FontSize="36" Margin="0,0,0,369"/>
+        <TextBox x:Name="txtActivity" Margin="226,65,202,314" FontSize="18"/>
+        <GroupBox x:Name="grpWorkoutIntensity" Header="GroupBox" Margin="226,204,202,48"/>
+        <Label x:Name="lblEasyCalories" Content="Easy Workout" FontSize="18" Margin="248,231,401,165" Width="151"/>
+        <Label x:Name="lblMedCalories" Content="Medium Workout" FontSize="18" Margin="248,275,401,126" Width="151"/>
+        <Label x:Name="lblHardCalories" Content="Hard Workout" FontSize="18" Margin="248,319,401,82" Width="151"/>
+        <Button x:Name="btnSave" Content="Save" Margin="318,146,404,251" FontSize="22" Click="btnSave_Click"/>
+        <Button x:Name="btnCancel" Content="Cancel" Margin="412,146,310,251" FontSize="22" Click="btnCancel_Click"/>
+        <TextBox x:Name="txtEasyWorkout" 
+                 Text="22"
+                 TextAlignment="Right" 
+                 Margin="0,237,229,0" 
+                 HorizontalAlignment="Right" 
+                 VerticalAlignment="Top" 
+                 Width="130" 
+                 FontSize="18"/>
+        <TextBox x:Name="txtMediumWorkout"
+                 Text="252" 
+                 TextAlignment="Right" 
+                 TextWrapping="Wrap" 
+                 Margin="441,278,229,128" 
+                 FontSize="18" 
+                 HorizontalAlignment="Stretch" 
+                 VerticalAlignment="Top"/>
+        <TextBox x:Name="txtHardWorkout" 
+                 Text="552" 
+                 TextAlignment="Right" 
+                 TextWrapping="Wrap" 
+                 Margin="441,322,229,84" 
+                 FontSize="18" 
+                 HorizontalAlignment="Stretch"/>
+
     </Grid>
 </Window>
