--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TCT.FitApp.Mobile.Components"
-             xmlns:controls="clr-namespace:Xamarin.Forms.Controls;assembly=CircularProgressBar" xmlns:plugin="clr-namespace:Xam.Plugin;assembly=Xam.Plugin"
+             xmlns:controls="clr-namespace:Xamarin.Forms.Controls;assembly=CircularProgressBar"
              x:Class="TCT.FitApp.Mobile.Pages.HomePage">
     <ContentPage.Content>
 
@@ -21,7 +21,8 @@
                 </Grid.ColumnDefinitions>
                 <StackLayout Grid.Column="0">
                     <Label Text="Hello," FontAttributes="Bold"/>
-                    <Label x:Name="txtDisplayName" Text="Jason Ryan" FontSize="20" FontAttributes="Bold"/>
+                    <Label x:Name="txtDisplayName"  FontSize="20" FontAttributes="Bold"/>
+                    <Label x:Name="txtDate" Text="Today, May 6th"  FontSize="15" FontAttributes="Bold"/>
                 </StackLayout>
                 <Button
                         Grid.Column="1"
@@ -48,10 +49,10 @@
                                 <Grid>
                                     <StackLayout>
                                         <Label Text="Calorie Goal" FontSize="15" FontAttributes="Bold"/>
-                                        <Label x:Name="lblCalorieGoal" Margin="0,-5,0,0" Text="&lt; 2000" FontSize="15" FontAttributes="Bold" />
+                                        <Label x:Name="lblCalorieGoal" Margin="0,-5,0,0"  FontSize="15" FontAttributes="Bold" />
                                         <StackLayout Orientation="Horizontal">
-                                            <Label x:Name="lblCalorieConsumed" Margin="0,-5,0,0" Text="+ 1000" FontSize="12"/>
-                                            <Label x:Name="lblCalorieBurned" Margin="0,-5,0,0" Text="- 500" FontSize="12"/>
+                                            <Label x:Name="lblCalorieConsumed" Margin="0,-5,0,0" FontSize="12"/>
+                                            <Label x:Name="lblCalorieBurned" Margin="0,-5,0,0"  FontSize="12"/>
                                         </StackLayout>
                                     </StackLayout>
                                 </Grid>
@@ -75,7 +76,7 @@
                                 <Grid>
                                     <StackLayout>
                                         <Label Text="Protein Goal" FontSize="15" FontAttributes="Bold"/>
-                                        <Label x:Name="lblProtein" Text="1500/2000"/>
+                                        <Label x:Name="lblProtein"/>
                                     </StackLayout>
                                 </Grid>
                                 <Grid Grid.Column="1">
