--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
@@ -43,7 +43,7 @@
             <Grid Grid.Row="1" Margin="10">
                 <StackLayout>
                     <!--Protein Card-->
-                    <Grid Margin="5" BackgroundColor="White">
+                    <Grid BackgroundColor="White">
                         <Grid Margin="10">
                             <StackLayout>
                                 <Grid>
@@ -66,7 +66,7 @@
                         </Grid>
                     </Grid>
                     <!--Calories Card-->
-                    <Grid Margin="5" BackgroundColor="White">
+                    <Grid  BackgroundColor="White">
                         <Grid Margin="10">
                             <StackLayout>
                                 <Grid>
@@ -98,7 +98,7 @@
             </Grid>
             <Grid Grid.Row="2">
                 <!--Activities Card-->
-                <Grid Margin="5" BackgroundColor="White">
+                <Grid Margin="10,-10,10,10" BackgroundColor="White">
                     <Grid Margin="10">
                         <StackLayout>
                             <Label Text="Activities" FontSize="15"  FontAttributes="Bold"/>
