--- a/TCT.FitApp/Nutritionix/App.xaml
+++ b/TCT.FitApp/Nutritionix/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Nutritionix.UI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="NotificationWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
