--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
@@ -12,29 +12,49 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Margin="10">
+                <!--Notification Bar-->
+                <Grid Grid.Row="0" x:Name="grdNotification" IsVisible="false" BackgroundColor="LightBlue">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="50"/>
+                    </Grid.ColumnDefinitions>
+                    <StackLayout Grid.Column="0" VerticalOptions="Center">
+                        <Image>
+                            <Image.Source>
+                                <FontImageSource
+                        Color="#2296F3"
+                        Size="25"
+                        FontFamily="IconFonts"
+                        Glyph="{x:Static local:IconFont.Bell}"/>
+                            </Image.Source>
+                        </Image>
+                    </StackLayout>
+                    <Label Grid.Column="1" x:Name="txtMessage" VerticalOptions="Center" HorizontalOptions="Center"/>
+                    <StackLayout Grid.Column="2">
+                        <Button  x:Name="btnClose" Text="x" WidthRequest="40" HeightRequest="40" HorizontalOptions="Center" Clicked="btnClose_Clicked"/>
+                    </StackLayout>
+                </Grid>
+                <Grid Grid.Row="1" Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
+                    <!--User Info-->
                     <StackLayout Grid.Column="0">
                         <Label Text="Hello," FontAttributes="Bold"/>
                         <Label x:Name="txtDisplayName"  FontSize="20" FontAttributes="Bold"/>
                         <Label x:Name="txtDate" Text="Today, May 6th"  FontSize="15" FontAttributes="Bold"/>
                     </StackLayout>
+                    <!--Buttons-->
                     <StackLayout Grid.Column="1" Orientation="Horizontal">
+
                         <Button
-                        Grid.Column="1"
-                        x:Name="btnViewProfile"
-                        Text="View Profile"
-                        VerticalOptions="CenterAndExpand"
-                        HorizontalOptions="CenterAndExpand"
-                        Clicked="btnViewProfile_Clicked"/>
-                        <Button
-                        Grid.Column="1"
                         x:Name="btnLogout"
                         Text="Logout"
                         VerticalOptions="CenterAndExpand"
@@ -42,7 +62,22 @@
                         Clicked="btnLogout_Clicked"/>
                     </StackLayout>
                 </Grid>
-                <Grid Grid.Row="1" Margin="10">
+                <Grid Grid.Row="2">
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                        <Button
+                        x:Name="btnViewProfile"
+                        Text="View Profile"
+                            WidthRequest="120"
+                        Clicked="btnViewProfile_Clicked"/>
+                        <Button
+                        x:Name="btnSettings"
+                        Text="Settings"
+                            WidthRequest="120"
+                        Clicked="btnSettings_Clicked"/>
+                    </StackLayout>
+                </Grid>
+                <!--Protein and Calorie Cards-->
+                <Grid Grid.Row="3" Margin="10">
                     <StackLayout>
                         <!--Protein Card-->
                         <Grid BackgroundColor="White">
@@ -98,7 +133,7 @@
                         </Grid>
                     </StackLayout>
                 </Grid>
-                <Grid Grid.Row="2" HeightRequest="200">
+                <Grid Grid.Row="4" HeightRequest="200">
                     <!--Activities Card-->
                     <Grid Margin="10,-10,10,10" BackgroundColor="White">
                         <Grid Margin="15">
@@ -122,7 +157,7 @@
                         </Grid>
                     </Grid>
                 </Grid>
-                <Grid Grid.Row="3" HeightRequest="200">
+                <Grid Grid.Row="5" HeightRequest="200">
                     <!--Items Card-->
                     <Grid Margin="10,-10,10,10" BackgroundColor="White">
                         <Grid Margin="15">
