--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
@@ -10,8 +10,8 @@
     <Grid>
         <Label Content="Username:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,50,0,0" FontSize="20" />
         <Label Content="Name:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,100,0,0" FontSize="20" />
-        <Label x:Name="lblUsername" Content="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,50,0" FontSize="20" />
-        <Label x:Name="lblFullName" Content="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,100,50,0" FontSize="20" />
+        <Label x:Name="lblUsername"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,50,0" FontSize="20" />
+        <Label x:Name="lblFullName"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,100,50,0" FontSize="20" />
         <Label Content="Access Level:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,150,0,0" FontSize="20" />
         <ComboBox x:Name="cboAccessLevels" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" Margin="0, 150, 20, 0" FontSize="20" />
         <Button x:Name="btnSubmit" Content="Submit" Height="50" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,290,0,0" Click="btnSubmit_Click" />
