--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainActivities.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainActivities.xaml
@@ -7,37 +7,42 @@
         mc:Ignorable="d"
         Title="Fit App" Height="450" Width="800">
     <Grid>
-        <Label x:Name="lblManageActivities" HorizontalAlignment="Center" Content="Manage Activities" FontSize="36" Margin="0,0,0,369"/>
-        <TextBox x:Name="txtActivity" Margin="226,65,202,314" FontSize="18"/>
-        <GroupBox x:Name="grpWorkoutIntensity" Header="GroupBox" Margin="226,204,202,48"/>
-        <Label x:Name="lblEasyCalories" Content="Easy Workout" FontSize="18" Margin="248,231,401,165" Width="151"/>
-        <Label x:Name="lblMedCalories" Content="Medium Workout" FontSize="18" Margin="248,275,401,126" Width="151"/>
-        <Label x:Name="lblHardCalories" Content="Hard Workout" FontSize="18" Margin="248,319,401,82" Width="151"/>
-        <Button x:Name="btnSave" Content="Save" Margin="318,146,404,251" FontSize="22" Click="btnSave_Click"/>
-        <Button x:Name="btnCancel" Content="Cancel" Margin="412,146,310,251" FontSize="22" Click="btnCancel_Click"/>
+        <Label x:Name="lblManageActivities" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Manage Activities" FontSize="36" Margin="0,10,0,0" Height="60" Width="300"/>
+        <TextBox x:Name="txtActivity" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,75,0,0" FontSize="18" Height="50" Width="300"/>
+        <Label x:Name="lblEasyCalories" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Easy Workout" FontSize="18" Margin="248,231,0,0" Width="151" Height="35"/>
+        <Label x:Name="lblMedCalories" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Medium Workout" FontSize="18" Margin="248,275,0,0" Width="151" Height="35"/>
+        <Label x:Name="lblHardCalories" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Hard Workout" FontSize="18" Margin="248,319,0,0" Width="151" Height="35"/>
+        <Button x:Name="btnSave" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Save" Margin="420,150,0,0" FontSize="22" Click="btnSave_Click" Height="35" Width="100"/>
+        <Button x:Name="btnCancel" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Cancel" Margin="280,150,0,0" FontSize="22" Click="btnCancel_Click" Height="35" Width="100"/>
         <TextBox x:Name="txtEasyWorkout" 
                  Text="22"
                  TextAlignment="Right" 
-                 Margin="0,237,229,0" 
-                 HorizontalAlignment="Right" 
+                 Margin="450,236,0,0" 
+                 HorizontalAlignment="Left" 
                  VerticalAlignment="Top" 
                  Width="130" 
+                 Height="30"
                  FontSize="18"/>
         <TextBox x:Name="txtMediumWorkout"
                  Text="252" 
                  TextAlignment="Right" 
                  TextWrapping="Wrap" 
-                 Margin="441,278,229,128" 
+                 Margin="450,280,0,0" 
                  FontSize="18" 
-                 HorizontalAlignment="Stretch" 
+                 HorizontalAlignment="Left" 
+                 Height="30"
+                 Width="130"
                  VerticalAlignment="Top"/>
         <TextBox x:Name="txtHardWorkout" 
                  Text="552" 
                  TextAlignment="Right" 
                  TextWrapping="Wrap" 
-                 Margin="441,322,229,84" 
+                 Margin="450,322,0,0" 
                  FontSize="18" 
-                 HorizontalAlignment="Stretch"/>
+                 Height="30"
+                 Width="130"
+                 VerticalAlignment="Top"
+                 HorizontalAlignment="Left"/>
 
     </Grid>
 </Window>
