--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainItems.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainItems.xaml
@@ -7,29 +7,31 @@
         mc:Ignorable="d"
         Title="MaintainItems" Height="450" Width="800">
     <Grid>
-        <Label HorizontalAlignment="Center" Content="Manage Items" FontSize="36" Margin="0,0,0,369"/>
-        <TextBox x:Name="txtItem" Margin="226,65,202,314" FontSize="18"/>
-        <GroupBox x:Name="grpItemNutrition" Header="Nutrition" Margin="226,204,202,48"/>
-        <Label x:Name="lblCalories" Content="Calories" FontSize="18" Margin="248,231,401,165" Width="151"/>
-        <Label x:Name="lblProtein" Content="Protein" FontSize="18" Margin="248,275,401,126" Width="151"/>
-        <Button x:Name="btnSave" Content="Save" Margin="318,146,404,251" FontSize="22" Click="btnSave_Click"/>
-        <Button x:Name="btnCancel" Content="Cancel" Margin="412,146,310,251" FontSize="22" Click="btnCancel_Click"/>
+        <Label HorizontalAlignment="Center" VerticalAlignment="Top" Content="Manage Items" FontSize="36" Width="250" Height="60" Margin="0,10,0,0"/>
+        <TextBox x:Name="txtItem"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,80,0,0" Width="200" Height="40" FontSize="24"/>
+        <Label x:Name="lblCalories" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Calories" FontSize="18" Margin="240,231,0,0" Width="100"/>
+        <Label x:Name="lblProtein" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Protein" FontSize="18" Margin="240,275,0,0" Width="100"/>
+        <Button x:Name="btnSave" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Save" Margin="318,146,0,0" Width="75" Height="35" FontSize="22" Click="btnSave_Click"/>
+        <Button x:Name="btnCancel" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Cancel" Margin="412,146,0,0" Width="75" Height="35" FontSize="22" Click="btnCancel_Click"/>
         <TextBox x:Name="txtCalories" 
                  Text="150"
                  TextAlignment="Right" 
-                 Margin="0,237,229,0" 
-                 HorizontalAlignment="Right" 
+                 Margin="400,237,229,0" 
+                 HorizontalAlignment="Left" 
                  VerticalAlignment="Top" 
+                 Height="30"
                  Width="130" 
                  FontSize="18"/>
         <TextBox x:Name="txtProtein"
                  Text="10" 
                  TextAlignment="Right" 
                  TextWrapping="Wrap" 
-                 Margin="441,278,229,128" 
+                 Margin="400,278,0,0" 
                  FontSize="18" 
-                 HorizontalAlignment="Stretch" 
+                 Height="30"
+                 Width="130"
+                 HorizontalAlignment="Left"
                  VerticalAlignment="Top"/>
-        <Label Content="g" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="610,278,229,128" />
+        <Label Content="g" HorizontalAlignment="Left" VerticalAlignment="Top" Width="20" Height="40" FontSize="18" Margin="530,278,0,0" />
     </Grid>
 </Window>
