--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainItemTypes.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainItemTypes.xaml
@@ -8,8 +8,8 @@
         Title="MaintainItemTypes" Height="350" Width="400">
     <Grid>
         <Label Content="Item Type:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,50,0,0" FontSize="20" />
-        <TextBox x:Name="txtItemType" Text="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Height="30" Width="250" Margin="0,53,20,0" FontSize="20" />
-        <Button x:Name="btnSubmit" Content="Submit" Height="50" Width="150" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,250,0,0" />
-        <Button x:Name="btnCancel" Content="Cancel" Height="50" Width="150" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="225,250,0,0" />
+        <TextBox x:Name="txtItemType" Text="Filler" HorizontalAlignment="Right" VerticalAlignment="Top" Height="30" Width="230" Margin="0,53,20,0" TextAlignment="Right" FontSize="20" />
+        <Button x:Name="btnSave" Click="btnSave_Click" Content="Save" Height="50" Width="150" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,250,0,0" />
+        <Button x:Name="btnCancel" Click="btnCancel_Click" Content="Cancel" Height="50" Width="150" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="225,250,0,0" />
     </Grid>
 </Window>
