--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
@@ -14,7 +14,7 @@
         <Label x:Name="lblFullName"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,100,50,0" FontSize="20" />
         <Label Content="Access Level:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,150,0,0" FontSize="20" />
         <ComboBox x:Name="cboAccessLevels" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" Margin="0, 150, 20, 0" FontSize="20" />
-        <Button x:Name="btnSubmit" Content="Submit" Height="50" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,290,0,0" Click="btnSubmit_Click" />
+        <Button x:Name="btnSave" Content="Save" Height="50" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,290,0,0" Click="btnSave_Click" />
         <Button x:Name="btnCreateReport" Content="Create Report" HorizontalAlignment="Left" Margin="268,236,0,0" VerticalAlignment="Top" Height="21" Width="112" Click="btnCreateReport_Click"/>
         <DatePicker x:Name="dpStartDate" HorizontalAlignment="Left" Margin="25,236,0,0" VerticalAlignment="Top"/>
         <Label Content="Start Date" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,210,0,0" FontSize="12" />
