--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainItems.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainItems.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TCT.FitApp.WPF"
         mc:Ignorable="d"
-        Title="MaintainItems" Height="450" Width="800">
+        Title="MaintainItems" Height="450" Width="800" WindowStartupLocation="CenterOwner">
     <Grid>
         <Label HorizontalAlignment="Center" VerticalAlignment="Top" Content="Manage Items" FontSize="36" Width="250" Height="60" Margin="0,10,0,0"/>
         <TextBox x:Name="txtItem"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,80,0,0" Width="200" Height="40" FontSize="24"/>
