--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/HomePage.xaml
@@ -111,7 +111,7 @@
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
-                                        <Grid>
+                                        <Grid Grid.Column="0">
                                             <StackLayout>
                                                 <Label Text="Calories" FontSize="15" FontAttributes="Bold"/>
                                                 <Label x:Name="lblCalorieGoal" Margin="0,-5,0,0"  FontSize="15" FontAttributes="Bold" />
@@ -122,7 +122,7 @@
                                             </StackLayout>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <StackLayout WidthRequest="35"  HorizontalOptions="Center">
+                                            <StackLayout WidthRequest="50"  HorizontalOptions="Center">
                                                 <Label Text="To Burn" FontSize="10" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
                                                 <Label x:Name="lblCalorieToBurn" HorizontalTextAlignment="Center" FontSize="25"  FontAttributes="Bold" />
                                             </StackLayout>
@@ -137,8 +137,8 @@
                     <!--Activities Card-->
                     <Grid Margin="10,-10,10,10" BackgroundColor="White">
                         <Grid Margin="15">
-                                <Label Text="Activities" Margin="0,10,0,0" HorizontalOptions="Start" FontSize="Large" FontAttributes="Bold"/>
-                                <StackLayout>
+                            <Label Text="Activities" Margin="0,10,0,0" HorizontalOptions="Start" FontSize="Large" FontAttributes="Bold"/>
+                            <StackLayout>
                                 <Button
                                     x:Name="btnManageActivity"
                                     HorizontalOptions="End"
@@ -168,30 +168,51 @@
                     <!--Items Card-->
                     <Grid Margin="10,-10,10,10" BackgroundColor="White">
                         <Grid Margin="15">
-                            <Label Text="Items" Margin="0,10,0,0" FontSize="Large" FontAttributes="Bold"/>
-                            <StackLayout>
-                            <Button
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Label Grid.Column="0" Text="Items" Margin="0,10,0,0" FontSize="Large" FontAttributes="Bold"/>
+                                <StackLayout  Grid.Column="1" Orientation="Horizontal" HorizontalOptions="End">
+                                    <Button
+                                    x:Name="btnAddItem"
+                                    Margin="-5"
+                                    Text="Add"
+                                    FontSize="10"
+                                    Clicked="btnAddItem_Clicked"/>
+                                    <Button
+                                    x:Name="btnDeleteItem"
+                                    Margin="-5"
+                                    Text="Delete"
+                                    FontSize="10"
+                                    Clicked="btnDeleteItem_Clicked"/>
+                                    <Button
                                     x:Name="btnManageItems"
-                                    HorizontalOptions="End"
-                                    VerticalOptions="Start"
-                                    Text="Manage Items"
-                                    WidthRequest="120"
+                                    Margin="-5"
+                                    FontSize="10"
+                                    Text="Manage"
                                     Clicked="btnManageItems_Clicked"/>
-                                <dg:DataGrid
+                                </StackLayout>
+                            </Grid>
+                            <dg:DataGrid Grid.Row="1"
                                 x:Name="dgvItems"
                                 SelectionEnabled="True"
                                 BorderColor="#FFFFFF"
                                 BackgroundColor="#FFFFF"
                                 HeaderBackground="#FFFFFF"
                                 ActiveRowColor="#8899AA">
-                                    <dg:DataGrid.Columns>
-                                        <dg:DataGridColumn Title="Name" PropertyName="Name"/>
-                                        <dg:DataGridColumn Title="Servings" PropertyName="Servings"/>
-                                        <dg:DataGridColumn Title="Calories" PropertyName="Calories"/>
-                                        <dg:DataGridColumn Title="Protein" PropertyName="Protein"/>
-                                    </dg:DataGrid.Columns>
-                                </dg:DataGrid>
-                            </StackLayout>
+                                <dg:DataGrid.Columns>
+                                    <dg:DataGridColumn Title="Name" PropertyName="Name"/>
+                                    <dg:DataGridColumn Title="Servings" PropertyName="Servings"/>
+                                    <dg:DataGridColumn Title="Calories" PropertyName="Calories"/>
+                                    <dg:DataGridColumn Title="Protein" PropertyName="Protein"/>
+                                </dg:DataGrid.Columns>
+                            </dg:DataGrid>
                         </Grid>
                     </Grid>
                 </Grid>
