--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ItemPage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/ItemPage.xaml
@@ -25,7 +25,7 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <Entry Grid.Column="0"  x:Name="txtUPC" />
+                            <Entry Grid.Column="0"  x:Name="txtUPC" TextChanged="txtUPC_TextChanged"/>
                             <Button Grid.Column="1" Text="Search" x:Name="btnLookUp" Clicked="btnLookUp_Clicked"/>
                         </Grid>
                         
