--- a/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
+++ b/TCT.FitApp/TCT.FitApp.WPF/MaintainUsers.xaml
@@ -5,20 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TCT.FitApp.WPF"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         WindowStartupLocation="CenterOwner"
-        Title="MaintainUsers" Height="400" Width="400">
-    <Grid>
-        <Label Content="Username:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,50,0,0" FontSize="20" />
-        <Label Content="Name:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,100,0,0" FontSize="20" />
-        <Label x:Name="lblUsername"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,50,0" FontSize="20" />
-        <Label x:Name="lblFullName"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,100,50,0" FontSize="20" />
-        <Label Content="Access Level:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,150,0,0" FontSize="20" />
-        <ComboBox x:Name="cboAccessLevels" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200" Margin="0, 150, 20, 0" FontSize="20" />
-        <Button x:Name="btnSave" Content="Save" Height="50" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,290,0,0" Click="btnSave_Click" />
-        <Button x:Name="btnCreateReport" Content="Create Report" HorizontalAlignment="Left" Margin="268,236,0,0" VerticalAlignment="Top" Height="21" Width="112" Click="btnCreateReport_Click"/>
-        <DatePicker x:Name="dpStartDate" HorizontalAlignment="Left" Margin="25,236,0,0" VerticalAlignment="Top"/>
-        <Label Content="Start Date" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,210,0,0" FontSize="12" />
-        <DatePicker x:Name="dpEndDate" HorizontalAlignment="Center" Margin="0,237,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.31,0.696"/>
-        <Label Content="End Date" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="149,210,0,0" FontSize="12" />
+        Title="MaintainUsers" Height="400" Width="420">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" MinWidth="120"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label Margin="10" Grid.Row="1" Grid.Column="0" Content="Username:" FontSize="20"/>
+        <Label x:Name="lblUsername"   Margin="10"  Grid.Row="1" Grid.Column="1" FontSize="20"/>
+        <Label Margin="10"  Grid.Row="2" Grid.Column="0" Content="Name:" FontSize="20"/>
+        <Label  x:Name="lblFullName"  Margin="10"  Grid.Row="2" Grid.Column="1" FontSize="20"/>
+        <Label Margin="10"  Grid.Row="3" Grid.Column="0" Content="Access Level:" FontSize="20"/>
+        <ComboBox x:Name="cboAccessLevels" Margin="10"  Grid.Row="3" Grid.Column="1"  FontSize="20"/>
+        <StackPanel Margin="10" Grid.ColumnSpan="2"  Grid.Row="4" Grid.Column="0" Orientation="Horizontal">
+            <DatePicker  x:Name="dpStartDate" Width="120" Margin="5"/>
+            <DatePicker  x:Name="dpEndDate"  Width="120" Margin="5"/>
+            <Button Width="100" Content="Create Report" x:Name="btnCreateReport" Click="btnCreateReport_Click"/>
+        </StackPanel>
+        <Button x:Name="btnSave"  Margin="10" HorizontalAlignment="Center" Width="120" Height="50" Content="Save" Grid.ColumnSpan="2" FontSize="20"  Grid.Row="5" Grid.Column="0" Click="btnSave_Click" />
     </Grid>
 </Window>
