--- a/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/SettingsPage.xaml
+++ b/TCT.FitApp/TCT.FitApp.Mobile/TCT.FitApp.Mobile/Pages/SettingsPage.xaml
@@ -21,17 +21,17 @@
                 <Label VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" x:Name="lblSettings" Text="Settings" FontSize="20" FontAttributes="Bold"/>
             </Grid>
 
-            <!--Name-->
+            <!--Protein-->
             <Grid Grid.Row="1">
                 <StackLayout Grid.Column="0" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" >
                     <Label x:Name="lblProtein" Margin="15,0,0,0" Text="Protein Goal" FontSize="18"/>
                 </StackLayout>
                 <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                    <Entry x:Name="txtProteinGoal" IsReadOnly="True" Margin="0,5,0,0" FontSize="18"/>
+                    <Entry x:Name="txtProteinGoal" Keyboard="Numeric" IsReadOnly="True" Margin="0,5,0,0" FontSize="18"/>
                 </StackLayout>
             </Grid>
 
-            <!--Height-->
+            <!--Calorie-->
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -41,7 +41,7 @@
                     <Label x:Name="lblCalorie" Margin="15,0,0,0" Text="Calorie Goal" FontSize="18"/>
                 </StackLayout>
                 <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" >
-                    <Entry x:Name="txtCalorieGoal" IsReadOnly="True" Margin="0,5,0,0" FontSize="18" />
+                    <Entry x:Name="txtCalorieGoal" Keyboard="Numeric" IsReadOnly="True" Margin="0,5,0,0" FontSize="18" />
                 </StackLayout>
             </Grid>
 
